# search-mcp-server

./: LICENSE  README.md  REQUIREMENTS.md  mcp_server.py  pyproject.toml
.github/workflows/: code_quality.yaml
